--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+import '../styles/global.css'
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,7 +8,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Gabriela&display=swap" rel="stylesheet">
+		<title>ZipRip - Análisis y Crítica de Videojuegos</title>
 	</head>
 	<body>
 		<slot />
