--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import { HeroComponent } from '../components/Hero.component';
+import { HelloComponent } from '../components/Hello.component';
 ---
 
 <Layout>
-	<Welcome />
+	<HeroComponent client:load />
+
+	<!-- Test components section (you can remove this later) -->
+	<div class="bg-slate-100 py-16">
+		<div class="max-w-4xl mx-auto px-6 space-y-6">
+			<h2 class="text-3xl font-bold text-slate-800 mb-8">Component Tests</h2>
+			<HelloComponent client:visible />
+			<HelloComponent client:visible helpText="Custom help text!" />
+		</div>
+	</div>
 </Layout>
